# software-licensor-rust

./: .env-example  .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE.md  LICENSE-MIT  README.md  create_build_scripts.sh  create_deployment_scripts.sh  rust-toolchain.toml
create_license/: Cargo.toml  build.sh  run.sh  testBuild.bat  testBuildaarch.bat  update_func.sh
create_license/src/: main.rs
create_license/src/my_modules/networking/input/decrypted/: validate.rs
create_license/src/my_modules/networking/input/decrypted/old/: get_user_license_maps.rs  license.rs  requests.rs
create_license/src/my_modules/utils/: maps.rs  to_base64.rs
create_license_refactor/: Cargo.toml  build-zig.sh  build.sh  update_func.sh
create_license_refactor/src/: main.rs
create_plugin/: Cargo.toml  build.sh  run.sh  update.sh  update_func.sh
create_plugin/src/: main.rs
create_plugin/src/db_info/: gathered_info.txt  license_item.txt  plugin_item.txt  plugin_user_item.txt
create_plugin/src/my_modules/: db.rs  license_request.rs  mod.rs  output.rs
create_plugin/src/my_modules/crypto/: aes.rs  custom.rs  mod.rs  rsa.rs  sha.rs
create_plugin/src/my_modules/error/: mod.rs
create_plugin/src/my_modules/utils/: maps.rs  mod.rs  to_base64.rs  to_json.rs  utils.rs
create_plugin_refactor/: Cargo.toml  build-zig.sh  build.sh  update_func.sh
create_plugin_refactor/src/: main.rs
create_plugin_refactor/src/modules/: mod.rs
create_store/: Cargo.toml  build-cargo-lambda.sh  build.sh  update_func.sh
create_store/src/: main.rs
deactivate_machines/: Cargo.toml  build-cargo-lambda.sh  build.sh  update_func.sh
deactivate_machines/src/: main.rs
get_license/: Cargo.toml  build.sh  run.sh  update_func.sh
get_license/src/: main.rs
get_license/src/my_modules/: mod.rs
get_license/src/my_modules/crypto/: mod.rs  sha.rs
get_license/src/my_modules/networking/output/: mod.rs
get_license/src/my_modules/networking/output/license/: mod.rs
get_license/src/my_modules/networking/output/response/: mod.rs
get_license/src/my_modules/utils/: to_base64.rs  utils.rs
get_license_refactor/: Cargo.toml  build-zig.sh  build.sh  update_func.sh
get_license_refactor/src/: main.rs
get_metrics/: Cargo.toml  build-cargo-lambda.sh  build.sh  update_func.sh
get_metrics/src/: main.rs
license_activation_refactor/: Cargo.toml  build-cargo-lambda.sh  build.sh  update_func.sh
license_activation_refactor/src/: error.rs  main.rs
license_auth/: .gitignore  Cargo.toml  build.sh  run.sh  update_func.sh
license_auth/src/: main.rs
license_auth/src/my_modules/: db.rs  juce.rs  mod.rs  utils.rs
link_store_admin/: Cargo.toml  build-cargo-lambda.sh  build.sh  update_func.sh
link_store_admin/src/: main.rs
power_tuning/: Cargo.toml  README.md
power_tuning/src/: create_license.rs  create_product.rs  deactivate_machines.rs  get_license.rs  license_activation.rs  main.rs  power_tuning.rs  regenerate_license_code.rs  register_store.rs  server_requests_and_responses.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/src/database_protos/: license.proto  machine.proto  product.proto  store.proto
proto/src/protos/: create_license_request.rs  create_license_response.rs  create_product_request.rs  create_product_response.rs  create_store_request.rs  deactivate_machines.rs  get_license_request.rs  get_metrics_request.rs  license_activation_request.rs  license_activation_response.rs  license_db_item.rs  link_store_request.rs  machine_db_item.rs  mod.rs  product_db_item.rs  pubkeys.rs  regenerate_license_code.rs  register_store_request.rs  register_store_response.rs  request.rs  response.rs  store_db_item.rs
proto/src/request_protos/: create_license.proto  create_product.proto  create_store..proto  create_store.proto  get_license.proto  get_metrics.proto  license_activation.proto  link_store.proto  pubkeys.proto  register_store.proto  request.proto  response.proto
proto/src/response_protos/: create_license.proto  create_product.proto  license_activation.proto  register_store.proto
publish_rotating_keys/: Cargo.toml  build-zig.sh  build.sh  update_func.sh
publish_rotating_keys/src/: main.rs
regenerate_license_code/: Cargo.toml  build-cargo-lambda.sh  build.sh  update_func.sh
regenerate_license_code/src/: main.rs
register_store/: Cargo.toml  run.sh  update_func.sh
register_store/src/: main.rs
register_store/src/my_modules/: db.rs  mod.rs
register_store/src/my_modules/crypto/: aes.rs  ecc.rs  mod.rs  rsa.rs  sha.rs
register_store/src/my_modules/error/: from.rs  mod.rs
register_store/src/my_modules/old/: aes.rs
register_store/src/my_modules/utils/: to_base64.rs  utils.rs
register_store_refactor/: Cargo.toml  build-zig.sh  build.sh  update_func.sh
register_store_refactor/src/: main.rs
scripting/: create_build_script.sh  create_deployment_script.sh  create_lambda_pub.sh  create_update_func_script.sh  insert.txt
update_metrics/: Cargo.toml  build.sh
update_metrics/src/: main.rs
update_settings/: Cargo.toml  build-cargo-lambda.sh  build.sh  update_func.sh
update_settings/src/: main.rs
utils/: Cargo.toml
utils/src/: base64.rs  crypto.rs  function_handler_macro.rs  get_license.rs  init_license.rs  lib.rs
utils/src/dynamodb/: dynamodb_utils.rs  maps.rs  maps_mk2.rs  mod.rs
utils/src/error/: into.rs  mod.rs
utils/src/tables/: licenses.rs  machines.rs  metrics.rs  mod.rs  products.rs  stores.rs
