[workspace]
members = [
    "license_activation_refactor",
    "create_license_refactor",
    "create_plugin_refactor",
    "get_license_refactor",
    "register_store_refactor",
	"utils",
    "proto",
    "publish_rotating_keys", 
    "power_tuning"
]

[profile.release]
strip = true
#debug = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"