[workspace]
members = [
    "license_activation_refactor",
    "create_license_refactor",
    "create_plugin_refactor",
    "deactivate_machines",
    "get_license_refactor",
    "register_store_refactor",
	"utils",
    "proto",
    "publish_rotating_keys", 
    "power_tuning"
]

[profile.release]
strip = true
#debug = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"