[workspace]
members = [
    "create_store",
    "create_license_refactor",
    "create_plugin_refactor",
    "deactivate_machines",
    "get_license_refactor",
    "license_activation_refactor",
    "power_tuning",
    "proto",
    "publish_rotating_keys", 
    "regenerate_license_code",
    "register_store_refactor",
    "utils",
    "update_settings",
    "get_metrics"
]

[profile.release]
strip = true
#debug = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"