[package]
name = "create_plugin_refactor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_plugin_refactor"
path = "src/main.rs"

[profile.release]
strip = true
#debug = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
utils = { path = "../utils" }
