[package]
name = "deactivate_machines"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deactivate_machines"
path = "src/main.rs"

[profile.release]
strip = true
#debug = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
utils = { path = "../utils", features = ["get_license"] }

[features]
logging = ["utils/logging"]
zeroize = ["utils/zeroize"]