[package]
name = "license_activation_refactor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "license_activation_refactor"
path = "src/main.rs"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
utils = { path = "../utils" }

[features]
logging = ["utils/logging"]
zeroize = ["utils/zeroize"]