[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
prost = "0.12.4"
zeroize = { version = "1", optional = true}

[build-dependencies]
prost-build = { version = "0.12.4" }