[package]
name = "publish_rotating_keys"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "publish_rotating_keys"
path = "src/main.rs"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }
utils = { path = "../utils", default-features = false, features = ["s3"] }

[features]
zeroize = ["utils/zeroize"]