[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[dependencies]
aes-gcm = { version = "0.10" }
aws-config = { version= "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = { version = "1.5.0", optional = true }
aws-sdk-dynamodb = { version = "1.30.1", optional = true }
aws-sdk-lambda = { version = "1.28.0", optional = true }
aws-sdk-s3 = { version = "1.30.1", optional = true }
base64 = "0.22.1"
chacha20poly1305 = "0.10"
dotenv = { version = "0.15.0", optional = true }
hex = "0.4.3"
http_private_key_manager = { path = "../../../libs/crypto-on-the-edge/key_manager" }
lambda_http = { version = "0.11", default-features = false, features = ["tracing", "apigw_http", "apigw_rest"] }
lambda_runtime = "0.11"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git", branch = "master", package = "p384", version = "0.14.0-pre", features = ["jwk", "ecdsa", "pem"]  }
proto = { path = "../proto" }
serde_json = "1"
sha2 = { version = "0.11.0-pre.3" }
sha3 = { version = "0.11.0-pre.3", features = ["asm"]}
simple_logger = "5"
substring = "1.4.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
zeroize = { version = "1.7.0", optional = true }

[features]
default = ["dynamodb"]
cognito = ["aws-sdk-cognitoidentityprovider"]
create_license = ["dynamodb"] # contains functionality for creating license codes
dynamodb = ["aws-sdk-dynamodb"]
get_license = ["dynamodb"] # contains all the functionality for outputting a GetLicenseResponse
lambda = ["aws-sdk-lambda"]
s3 = ["aws-sdk-s3"]
local = ["dotenv"]
logging = ["http_private_key_manager/logging"]
zeroize = [
    "dep:zeroize", 
    "http_private_key_manager/zeroize", 
    "proto/zeroize",
    "sha2/zeroize",
    "sha3/zeroize",
    "aes-gcm/zeroize",
]
